# desk_control

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
docs/: TODO.md  component-size.csv  memory.md
eda/desk_control/: BOM.xlsx  desk_control.kicad_dru  desk_control.kicad_pcb  desk_control.kicad_pro  desk_control.kicad_sch  desk_control_BOM.csv
main/: CMakeLists.txt  Kconfig.projbuild  app_events.c  app_events.h  calendar_serv.c  calendar_serv.h  display_manager.c  display_manager.h  idf_component.yml  lvgl_demo_ui.c  main.c  pin_definitions.h  pomodoro.c  pomodoro.h  spotify_serv.c  spotify_serv.h  spotify_web.h  time_serv.c  time_serv.h  todoist_serv.c  todoist_serv.h  ui.c  ui.h  weather_serv.c  weather_serv.h  wifi_manager.c  wifi_manager.h
main/certs/: server_cert.pem  server_key.pem
main/fonts/: jetbrains_mono_bold_10.c  jetbrains_mono_bold_12.c  jetbrains_mono_bold_14.c  jetbrains_mono_bold_18.c  jetbrains_mono_bold_46.c  jetbrains_mono_bold_50.c  jetbrains_mono_bold_8.c  jetbrains_mono_light_10.c  jetbrains_mono_light_12.c  jetbrains_mono_light_14.c  jetbrains_mono_light_18.c  jetbrains_mono_light_50.c  jetbrains_mono_regular_10.c  jetbrains_mono_regular_12.c  jetbrains_mono_regular_14.c  jetbrains_mono_regular_18.c  jetbrains_mono_regular_8.c  noto_color_emoji_50.c  noto_emoji_50.c
other/: calendar.gs
